--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -6,25 +6,25 @@ on:
   workflow_dispatch:
 
 jobs:
-  # create_release:
-  #   name: Create release
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-  #   steps:
-  #     - name: Create release
-  #       id: create_release
-  #       uses: actions/create-release@v1
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       with:
-  #         tag_name: ${{ github.run_number }}
-  #         release_name: Release ${{ github.run_number }}
-  #         draft: false
-  #         prerelease: false
+  create_release:
+    name: Create release
+    runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    steps:
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+          draft: false
+          prerelease: false
 
   build:
-    # needs: create_release
+    needs: create_release
     runs-on: ${{ matrix.os }}
     strategy:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
@@ -98,15 +98,15 @@ jobs:
           fi
         fi
 
-    # - name: Configure CMake (Ubuntu & macOS)
-    #   if: matrix.os != 'windows-latest'
-    #   run: |
-    #     cmake -B ${{ steps.strings.outputs.build-output-dir }} \
-    #           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} \
-    #           -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
-    #           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-    #           -DCMAKE_TOOLCHAIN_FILE=$HOME/vcpkg/scripts/buildsystems/vcpkg.cmake \
-    #           -S ${GITHUB_WORKSPACE}/source
+    - name: Configure CMake (Ubuntu & macOS)
+      if: matrix.os != 'windows-latest'
+      run: |
+        cmake -B ${{ steps.strings.outputs.build-output-dir }} \
+              -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} \
+              -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
+              -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+              -DCMAKE_TOOLCHAIN_FILE=$HOME/vcpkg/scripts/buildsystems/vcpkg.cmake \
+              -S ${GITHUB_WORKSPACE}/source
 
 
     # Windows
@@ -151,81 +151,81 @@ jobs:
           echo "vcpkg is cached"
         }
         
-    # - name: Configure CMake (Windows)
-    #   if: matrix.os == 'windows-latest'
-    #   run: |
-    #     cmake -B ${{ steps.strings.outputs.build-output-dir }} `
-    #           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} `
-    #           -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} `
-    #           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} `
-    #           -DCMAKE_TOOLCHAIN_FILE=C:\Users\runneradmin\vcpkg\scripts\buildsystems\vcpkg.cmake `
-    #           -S ${{ github.workspace }}\source
+    - name: Configure CMake (Windows)
+      if: matrix.os == 'windows-latest'
+      run: |
+        cmake -B ${{ steps.strings.outputs.build-output-dir }} `
+              -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} `
+              -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} `
+              -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} `
+              -DCMAKE_TOOLCHAIN_FILE=C:\Users\runneradmin\vcpkg\scripts\buildsystems\vcpkg.cmake `
+              -S ${{ github.workspace }}\source
 
-    # # ###########################   Build   #########################################################    
+    # ###########################   Build   #########################################################    
       
-    # - name: Build
-    #   # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-    #   run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target install        
+    - name: Build
+      # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
+      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target install        
 
 
-    # #   ###########################   Upload Release   #########################################################
-    # - name: Prepare directories and copy files (Windows)
-    #   if: matrix.os == 'windows-latest'
-    #   shell: pwsh
-    #   run: |
-    #     $buildOutputDir = "${{ steps.strings.outputs.build-output-dir }}"
-    #     $releaseDir = Join-Path -Path $buildOutputDir -ChildPath 'release_out'
+    #   ###########################   Upload Release   #########################################################
+    - name: Prepare directories and copy files (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
+      run: |
+        $buildOutputDir = "${{ steps.strings.outputs.build-output-dir }}"
+        $releaseDir = Join-Path -Path $buildOutputDir -ChildPath 'release_out'
         
-    #     # cоздание директорий
-    #     New-Item -ItemType Directory -Force -Path $releaseDir
+        # cоздание директорий
+        New-Item -ItemType Directory -Force -Path $releaseDir
         
-    #     # Копирование файлов и директорий
-    #     Copy-Item -Recurse -Force -Path (Join-Path -Path $buildOutputDir -ChildPath 'Release\*') -Destination $releaseDir
+        # Копирование файлов и директорий
+        Copy-Item -Recurse -Force -Path (Join-Path -Path $buildOutputDir -ChildPath 'Release\*') -Destination $releaseDir
 
-    # - name: Archive files (Windows)
-    #   if: matrix.os == 'windows-latest'
-    #   shell: pwsh
-    #   run: |
-    #     $buildOutputDir = "${{ steps.strings.outputs.build-output-dir }}"
-    #     $releaseDir = Join-Path -Path $buildOutputDir -ChildPath 'release_out'
-    #     $archivePath = Join-Path -Path $buildOutputDir -ChildPath 'join_server.zip'
+    - name: Archive files (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
+      run: |
+        $buildOutputDir = "${{ steps.strings.outputs.build-output-dir }}"
+        $releaseDir = Join-Path -Path $buildOutputDir -ChildPath 'release_out'
+        $archivePath = Join-Path -Path $buildOutputDir -ChildPath 'join_server.zip'
         
-    #     Compress-Archive -Path $releaseDir -DestinationPath $archivePath -Force
+        Compress-Archive -Path $releaseDir -DestinationPath $archivePath -Force
 
       
-    # - name: Prepare directories for archiving (Ubuntu & macOS)
-    #   if: matrix.os != 'windows-latest'
-    #   run: |
-    #     mkdir -p ${{ steps.strings.outputs.build-output-dir }}/release_out  
-    #     cp -r ${{ steps.strings.outputs.build-output-dir }}/join_server ${{ steps.strings.outputs.build-output-dir }}/release_out
+    - name: Prepare directories for archiving (Ubuntu & macOS)
+      if: matrix.os != 'windows-latest'
+      run: |
+        mkdir -p ${{ steps.strings.outputs.build-output-dir }}/release_out  
+        cp -r ${{ steps.strings.outputs.build-output-dir }}/join_server ${{ steps.strings.outputs.build-output-dir }}/release_out
                 
-    # - name: Archive server files (Ubuntu & macOS)
-    #   if: matrix.os != 'windows-latest'
-    #   run: |
-    #     cd ${{ steps.strings.outputs.build-output-dir }}/release_out
-    #     tar -czf join_server.tar.gz server library
+    - name: Archive server files (Ubuntu & macOS)
+      if: matrix.os != 'windows-latest'
+      run: |
+        cd ${{ steps.strings.outputs.build-output-dir }}/release_out
+        tar -czf join_server.tar.gz server library
 
 
-    # - name: Upload Release Asset (Ubuntu & macOS)
-    #   if: ${{ success() && matrix.os != 'windows-latest' }}    
-    #   id: upload-release-asset-server
-    #   uses: actions/upload-release-asset@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ needs.create_release.outputs.upload_url }}
-    #     asset_path: ${{ steps.strings.outputs.build-output-dir }}/release_out/join_server.tar.gz
-    #     asset_name: join_server-${{ matrix.os }}-0.0.${{ github.run_number }}.tar.gz
-    #     asset_content_type: application/gzip
+    - name: Upload Release Asset (Ubuntu & macOS)
+      if: ${{ success() && matrix.os != 'windows-latest' }}    
+      id: upload-release-asset-server
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ needs.create_release.outputs.upload_url }}
+        asset_path: ${{ steps.strings.outputs.build-output-dir }}/release_out/join_server.tar.gz
+        asset_name: join_server-${{ matrix.os }}-0.0.${{ github.run_number }}.tar.gz
+        asset_content_type: application/gzip
 
-    # - name: Upload Release Asset (Windows)
-    #   if: ${{ success() && matrix.os == 'windows-latest' }}
-    #   id: upload-release-asset-windows
-    #   uses: actions/upload-release-asset@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ needs.create_release.outputs.upload_url }}
-    #     asset_path: ${{ steps.strings.outputs.build-output-dir }}\join_server.zip
-    #     asset_name: join_server-${{ matrix.os }}-0.0.${{ github.run_number }}.zip
-    #     asset_content_type: application/zip
+    - name: Upload Release Asset (Windows)
+      if: ${{ success() && matrix.os == 'windows-latest' }}
+      id: upload-release-asset-windows
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ needs.create_release.outputs.upload_url }}
+        asset_path: ${{ steps.strings.outputs.build-output-dir }}\join_server.zip
+        asset_name: join_server-${{ matrix.os }}-0.0.${{ github.run_number }}.zip
+        asset_content_type: application/zip
